voicevox_core.h

typedef int32_t VoicevoxAccelerationMode;
typedef int32_t VoicevoxResultCode;
typedef int32_t VoicevoxUserDictWordType;
/**
 * テキスト解析器としてのOpen JTalk。
 *
 * <b>構築</b>(_construction_)は ::voicevox_open_jtalk_rc_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_open_jtalk_rc_delete で行う。
 *
 * 参照カウント方式のスマートポインタ(reference-counted smart pointer)であり、
 * ::voicevox_synthesizer_new に渡されるときには参照カウンタがインクリメントされる形でオブジェクトの共有が行われる。
 *
 * \example{
 * ```c
 * OpenJtalkRc *open_jtalk;
 * voicevox_open_jtalk_rc_new("./open_jtalk_dic_utf_8-1.11", &open_jtalk);
 * // ⋮
 * voicevox_open_jtalk_rc_delete(open_jtalk);
 * ```
 * }
 *
 * \orig-impl{OpenJtalkRc}
 */
typedef struct OpenJtalkRc OpenJtalkRc;
/**
 * ONNX Runtime。
 *
 * シングルトンであり、インスタンスは高々一つ。
 *
 * ```c
 * const VoicevoxOnnxruntime *ort1;
 * voicevox_onnxruntime_load_once(
 *     voicevox_make_default_load_onnxruntime_options(), &ort1);
 * const VoicevoxOnnxruntime *ort2 = voicevox_onnxruntime_get();
 * assert(ort1 == ort2);
 * ```
 *
 * \orig-impl{VoicevoxOnnxruntime}
 */
typedef struct VoicevoxOnnxruntime VoicevoxOnnxruntime;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * ユーザー辞書。
 *
 * \orig-impl{VoicevoxUserDict}
 */
typedef struct VoicevoxUserDict VoicevoxUserDict;
/**
 * 音声モデルファイル。
 *
 * VVMファイルと対応する。
 * <b>構築</b>(_construction_)は ::voicevox_voice_model_file_open で行い、<b>破棄</b>(_destruction_)は ::voicevox_voice_model_file_delete で行う。
 *
 * \orig-impl{VoicevoxVoiceModelFile}
 */
typedef struct VoicevoxVoiceModelFile VoicevoxVoiceModelFile;
/**
 * ::voicevox_onnxruntime_load_once のオプション。
 *
 * \availability{
 *   [リリース](https://github.com/voicevox/voicevox_core/releases)されているライブラリではiOSを除くプラットフォームで利用可能。詳細は<a href="#voicevox-core-availability">ファイルレベルの"Availability"の節</a>を参照。
 * }
 *
 * \no-orig-impl{VoicevoxLoadOnnxruntimeOptions}
 */
typedef struct VoicevoxLoadOnnxruntimeOptions
{
  /**
   * ONNX Runtimeのファイル名（モジュール名）もしくはファイルパスを指定する。
   *
   * `dlopen`/[`LoadLibraryExW`](https://learn.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibraryexw)の引数に使われる。デフォルトは ::voicevox_get_onnxruntime_lib_versioned_filename と同じ。
   */
  const char *filename;
} VoicevoxLoadOnnxruntimeOptions;
/**
 * ::voicevox_synthesizer_new のオプション。
 *
 * \no-orig-impl{VoicevoxInitializeOptions}
 */
typedef struct VoicevoxInitializeOptions
{
  /**
   * ハードウェアアクセラレーションモード
   */
  VoicevoxAccelerationMode acceleration_mode;
  /**
   * CPU利用数を指定
   * 0を指定すると環境に合わせたCPUが利用される
   */
  uint16_t cpu_num_threads;
} VoicevoxInitializeOptions;
/**
 * 音声モデルID。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
/**
 * ::voicevox_synthesizer_synthesis のオプション。
 *
 * \no-orig-impl{VoicevoxSynthesisOptions}
 */
typedef struct VoicevoxSynthesisOptions
{
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxSynthesisOptions;
/**
 * ::voicevox_synthesizer_tts のオプション。
 *
 * \no-orig-impl{VoicevoxTtsOptions}
 */
typedef struct VoicevoxTtsOptions
{
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxTtsOptions;
/**
 * ユーザー辞書の単語。
 *
 * \orig-impl{VoicevoxUserDictWord}
 */
typedef struct VoicevoxUserDictWord
{
  /**
   * 表記
   */
  const char *surface;
  /**
   * 読み
   */
  const char *pronunciation;
  /**
   * アクセント型
   */
  uintptr_t accent_type;
  /**
   * 単語の種類
   */
  VoicevoxUserDictWordType word_type;
  /**
   * 優先度
   */
  uint32_t priority;
} VoicevoxUserDictWord;
  const char *
  voicevox_get_onnxruntime_lib_versioned_filename(void);
  VoicevoxResultCode
  voicevox_onnxruntime_load_once(struct VoicevoxLoadOnnxruntimeOptions options,
                                 const struct VoicevoxOnnxruntime **out_onnxruntime);
  VoicevoxResultCode
  voicevox_synthesizer_new(const struct VoicevoxOnnxruntime *onnxruntime,
                           const struct OpenJtalkRc *open_jtalk,
                           struct VoicevoxInitializeOptions options,
                           struct VoicevoxSynthesizer **out_synthesizer);
  VoicevoxResultCode
  voicevox_synthesizer_synthesis(const struct VoicevoxSynthesizer *synthesizer,
                                 const char *audio_query_json,
                                 VoicevoxStyleId style_id,
                                 struct VoicevoxSynthesisOptions options,
                                 uintptr_t *output_wav_length,
                                 uint8_t **output_wav);
  VoicevoxResultCode
  voicevox_synthesizer_tts(const struct VoicevoxSynthesizer *synthesizer,
                           const char *text,
                           VoicevoxStyleId style_id,
                           struct VoicevoxTtsOptions options,
                           uintptr_t *output_wav_length,
                           uint8_t **output_wav);
  VoicevoxResultCode
  voicevox_user_dict_import(const struct VoicevoxUserDict *user_dict,
                            const struct VoicevoxUserDict *other_dict);
  VoicevoxResultCode
  voicevox_user_dict_save(const struct VoicevoxUserDict *user_dict,
                          const char *path);
  void
  voicevox_user_dict_delete(struct VoicevoxUserDict *user_dict);