lib/generated_bindings.dart


  late final _voicevox_user_dict_importPtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode$1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<VoicevoxUserDict>)>>('voicevox_user_dict_import');
  late final _voicevox_user_dict_import =
      _voicevox_user_dict_importPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<VoicevoxUserDict>)>();

  int voicevox_user_dict_save(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _voicevox_user_dict_save(
      user_dict,
      path,
    );
  }

  late final _voicevox_user_dict_savePtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode$1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Char>)>>('voicevox_user_dict_save');
  late final _voicevox_user_dict_save = _voicevox_user_dict_savePtr.asFunction<
      int Function(ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<ffi.Char>)>();

  void voicevox_user_dict_delete(
    ffi.Pointer<VoicevoxUserDict> user_dict,
  ) {
    return _voicevox_user_dict_delete(
      user_dict,
    );
  }

  late final _voicevox_user_dict_deletePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VoicevoxUserDict>)>>(
      'voicevox_user_dict_delete');
  late final _voicevox_user_dict_delete = _voicevox_user_dict_deletePtr
      .asFunction<void Function(ffi.Pointer<VoicevoxUserDict>)>();
}

/// ハードウェアアクセラレーションモードを設定する設定値。
///
/// \orig-impl{VoicevoxAccelerationMode}
enum VoicevoxAccelerationMode {
  /// 実行環境に合った適切なハードウェアアクセラレーションモードを選択する
  VOICEVOX_ACCELERATION_MODE_AUTO(0),

  /// ハードウェアアクセラレーションモードを"CPU"に設定する
  VOICEVOX_ACCELERATION_MODE_CPU(1),

  /// ハードウェアアクセラレーションモードを"GPU"に設定する
  VOICEVOX_ACCELERATION_MODE_GPU(2);

  final int value;
  const VoicevoxAccelerationMode(this.value);

  static VoicevoxAccelerationMode fromValue(int value) => switch (value) {
        0 => VOICEVOX_ACCELERATION_MODE_AUTO,
        1 => VOICEVOX_ACCELERATION_MODE_CPU,
        2 => VOICEVOX_ACCELERATION_MODE_GPU,
        _ => throw ArgumentError(
            'Unknown value for VoicevoxAccelerationMode: $value'),
      };
}

typedef VoicevoxAccelerationMode$1 = ffi.Int32;
typedef DartVoicevoxAccelerationMode = int;

/// 処理結果を示す結果コード。
///
/// \orig-impl{VoicevoxResultCode,C APIにしか無いものがあることに注意。}
enum VoicevoxResultCode {
  /// 成功
  VOICEVOX_RESULT_OK(0),

  /// open_jtalk辞書ファイルが読み込まれていない
  VOICEVOX_RESULT_NOT_LOADED_OPENJTALK_DICT_ERROR(1),

  /// サポートされているデバイス情報取得に失敗した
  VOICEVOX_RESULT_GET_SUPPORTED_DEVICES_ERROR(3),

  /// GPUモードがサポートされていない
  VOICEVOX_RESULT_GPU_SUPPORT_ERROR(4),

  /// 推論ライブラリのロードまたは初期化ができなかった
  VOICEVOX_RESULT_INIT_INFERENCE_RUNTIME_ERROR(29),

  /// スタイルIDに対するスタイルが見つからなかった
  VOICEVOX_RESULT_STYLE_NOT_FOUND_ERROR(6),

  /// 音声モデルIDに対する音声モデルが見つからなかった
  VOICEVOX_RESULT_MODEL_NOT_FOUND_ERROR(7),

  /// 推論に失敗した
  VOICEVOX_RESULT_RUN_MODEL_ERROR(8),

  /// 入力テキストの解析に失敗した
  VOICEVOX_RESULT_ANALYZE_TEXT_ERROR(11),

  /// 無効なutf8文字列が入力された
  VOICEVOX_RESULT_INVALID_UTF8_INPUT_ERROR(12),

  /// AquesTalk風記法のテキストの解析に失敗した
  VOICEVOX_RESULT_PARSE_KANA_ERROR(13),

  /// 無効なAudioQuery
  VOICEVOX_RESULT_INVALID_AUDIO_QUERY_ERROR(14),

  /// 無効なAccentPhrase
  VOICEVOX_RESULT_INVALID_ACCENT_PHRASE_ERROR(15),

  /// ZIPファイルを開くことに失敗した
  VOICEVOX_RESULT_OPEN_ZIP_FILE_ERROR(16),

  /// ZIP内のファイルが読めなかった
  VOICEVOX_RESULT_READ_ZIP_ENTRY_ERROR(17),

  /// モデルの形式が不正
  VOICEVOX_RESULT_INVALID_MODEL_HEADER_ERROR(28),

  /// すでに読み込まれている音声モデルを読み込もうとした
  VOICEVOX_RESULT_MODEL_ALREADY_LOADED_ERROR(18),

  /// すでに読み込まれているスタイルを読み込もうとした
  VOICEVOX_RESULT_STYLE_ALREADY_LOADED_ERROR(26),

  /// 無効なモデルデータ
  VOICEVOX_RESULT_INVALID_MODEL_DATA_ERROR(27),

  /// ユーザー辞書を読み込めなかった
  VOICEVOX_RESULT_LOAD_USER_DICT_ERROR(20),

  /// ユーザー辞書を書き込めなかった
  VOICEVOX_RESULT_SAVE_USER_DICT_ERROR(21),

  /// ユーザー辞書に単語が見つからなかった
  VOICEVOX_RESULT_USER_DICT_WORD_NOT_FOUND_ERROR(22),

  /// OpenJTalkのユーザー辞書の設定に失敗した
  VOICEVOX_RESULT_USE_USER_DICT_ERROR(23),

  /// ユーザー辞書の単語のバリデーションに失敗した
  VOICEVOX_RESULT_INVALID_USER_DICT_WORD_ERROR(24),

  /// UUIDの変換に失敗した
  VOICEVOX_RESULT_INVALID_UUID_ERROR(25);

  final int value;
  const VoicevoxResultCode(this.value);

  static VoicevoxResultCode fromValue(int value) => switch (value) {
        0 => VOICEVOX_RESULT_OK,
        1 => VOICEVOX_RESULT_NOT_LOADED_OPENJTALK_DICT_ERROR,
        3 => VOICEVOX_RESULT_GET_SUPPORTED_DEVICES_ERROR,
        4 => VOICEVOX_RESULT_GPU_SUPPORT_ERROR,
        29 => VOICEVOX_RESULT_INIT_INFERENCE_RUNTIME_ERROR,
        6 => VOICEVOX_RESULT_STYLE_NOT_FOUND_ERROR,
        7 => VOICEVOX_RESULT_MODEL_NOT_FOUND_ERROR,
        8 => VOICEVOX_RESULT_RUN_MODEL_ERROR,
        11 => VOICEVOX_RESULT_ANALYZE_TEXT_ERROR,
        12 => VOICEVOX_RESULT_INVALID_UTF8_INPUT_ERROR,
        13 => VOICEVOX_RESULT_PARSE_KANA_ERROR,
        14 => VOICEVOX_RESULT_INVALID_AUDIO_QUERY_ERROR,
        15 => VOICEVOX_RESULT_INVALID_ACCENT_PHRASE_ERROR,
        16 => VOICEVOX_RESULT_OPEN_ZIP_FILE_ERROR,
        17 => VOICEVOX_RESULT_READ_ZIP_ENTRY_ERROR,
        28 => VOICEVOX_RESULT_INVALID_MODEL_HEADER_ERROR,
        18 => VOICEVOX_RESULT_MODEL_ALREADY_LOADED_ERROR,
        26 => VOICEVOX_RESULT_STYLE_ALREADY_LOADED_ERROR,
        27 => VOICEVOX_RESULT_INVALID_MODEL_DATA_ERROR,
        20 => VOICEVOX_RESULT_LOAD_USER_DICT_ERROR,
        21 => VOICEVOX_RESULT_SAVE_USER_DICT_ERROR,
        22 => VOICEVOX_RESULT_USER_DICT_WORD_NOT_FOUND_ERROR,
        23 => VOICEVOX_RESULT_USE_USER_DICT_ERROR,
        24 => VOICEVOX_RESULT_INVALID_USER_DICT_WORD_ERROR,
        25 => VOICEVOX_RESULT_INVALID_UUID_ERROR,
        _ =>
          throw ArgumentError('Unknown value for VoicevoxResultCode: $value'),
      };
}

typedef VoicevoxResultCode$1 = ffi.Int32;
typedef DartVoicevoxResultCode = int;

/// ユーザー辞書の単語の種類。
///
/// \orig-impl{VoicevoxUserDictWordType}
enum VoicevoxUserDictWordType {
  /// 固有名詞。
  VOICEVOX_USER_DICT_WORD_TYPE_PROPER_NOUN(0),

  /// 一般名詞。
  VOICEVOX_USER_DICT_WORD_TYPE_COMMON_NOUN(1),

  /// 動詞。
  VOICEVOX_USER_DICT_WORD_TYPE_VERB(2),

  /// 形容詞。
  VOICEVOX_USER_DICT_WORD_TYPE_ADJECTIVE(3),

  /// 接尾辞。
  VOICEVOX_USER_DICT_WORD_TYPE_SUFFIX(4);

  final int value;
  const VoicevoxUserDictWordType(this.value);

  static VoicevoxUserDictWordType fromValue(int value) => switch (value) {
        0 => VOICEVOX_USER_DICT_WORD_TYPE_PROPER_NOUN,
        1 => VOICEVOX_USER_DICT_WORD_TYPE_COMMON_NOUN,
        2 => VOICEVOX_USER_DICT_WORD_TYPE_VERB,
        3 => VOICEVOX_USER_DICT_WORD_TYPE_ADJECTIVE,
        4 => VOICEVOX_USER_DICT_WORD_TYPE_SUFFIX,
        _ => throw ArgumentError(
            'Unknown value for VoicevoxUserDictWordType: $value'),
      };
}

typedef VoicevoxUserDictWordType$1 = ffi.Int32;
typedef DartVoicevoxUserDictWordType = int;

final class OpenJtalkRc extends ffi.Opaque {}

final class VoicevoxOnnxruntime extends ffi.Opaque {}

final class VoicevoxSynthesizer extends ffi.Opaque {}

final class VoicevoxUserDict extends ffi.Opaque {}

final class VoicevoxVoiceModelFile extends ffi.Opaque {}

/// ::voicevox_onnxruntime_load_once のオプション。
///
/// \availability{
/// [リリース](https://github.com/voicevox/voicevox_core/releases)されているライブラリではiOSを除くプラットフォームで利用可能。詳細は<a href="#voicevox-core-availability">ファイルレベルの"Availability"の節</a>を参照。
/// }
///
/// \no-orig-impl{VoicevoxLoadOnnxruntimeOptions}
final class VoicevoxLoadOnnxruntimeOptions extends ffi.Struct {
  /// ONNX Runtimeのファイル名（モジュール名）もしくはファイルパスを指定する。
  ///
  /// `dlopen`/[`LoadLibraryExW`](https://learn.microsoft.com/en-us/windows/win32/api/libloaderapi/nf-libloaderapi-loadlibraryexw)の引数に使われる。デフォルトは ::voicevox_get_onnxruntime_lib_versioned_filename と同じ。
  external ffi.Pointer<ffi.Char> filename;
}

/// ::voicevox_synthesizer_new のオプション。
///
/// \no-orig-impl{VoicevoxInitializeOptions}
final class VoicevoxInitializeOptions extends ffi.Struct {
  /// ハードウェアアクセラレーションモード
  @VoicevoxAccelerationMode$1()
  external int acceleration_mode;

  /// CPU利用数を指定
  /// 0を指定すると環境に合わせたCPUが利用される
  @ffi.Uint16()
  external int cpu_num_threads;
}

/// 音声モデルID。
///
/// \orig-impl{VoicevoxVoiceModelId}
typedef VoicevoxVoiceModelId = ffi.Pointer<ffi.Pointer<ffi.Uint8>>;

/// スタイルID。
///
/// VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
///
/// \orig-impl{VoicevoxStyleId}
typedef VoicevoxStyleId = ffi.Uint32;
typedef DartVoicevoxStyleId = int;

/// ::voicevox_synthesizer_synthesis のオプション。
///
/// \no-orig-impl{VoicevoxSynthesisOptions}
final class VoicevoxSynthesisOptions extends ffi.Struct {
  /// 疑問文の調整を有効にする
  @ffi.Bool()
  external bool enable_interrogative_upspeak;
}

/// ::voicevox_synthesizer_tts のオプション。
///
/// \no-orig-impl{VoicevoxTtsOptions}
final class VoicevoxTtsOptions extends ffi.Struct {
  /// 疑問文の調整を有効にする
  @ffi.Bool()
  external bool enable_interrogative_upspeak;
}

/// ユーザー辞書の単語。
///
/// \orig-impl{VoicevoxUserDictWord}
final class VoicevoxUserDictWord extends ffi.Struct {
  /// 表記
  external ffi.Pointer<ffi.Char> surface;

  /// 読み
  external ffi.Pointer<ffi.Char> pronunciation;

  /// アクセント型
  @ffi.UintPtr()
  external int accent_type;

  /// 単語の種類
  @VoicevoxUserDictWordType$1()
  external int word_type;

  /// 優先度
  @ffi.Uint32()
  external int priority;
}
